--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
+    "@mui/x-charts": "^7.21.0",
     "@prisma/client": "^5.21.1",
     "@tanstack/react-query": "^5.59.15",
     "@trpc/client": "^11.0.0-rc.586",
